--- a/matrix/Assessment_matrix.tex
+++ b/matrix/Assessment_matrix.tex
@@ -3,8 +3,8 @@
 \usepackage{tfrupee}
 \usepackage{geometry}
 
-\newcommand{\myvec}[1]{\begin{bmatrix}#1\end{bmatrix}}
-\newcommand{\mydet}[1]{\begin{vmatrix}#1\end{vmatrix}}
+\providecommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
+\providecommand{\myvec}[1]{\ensuremath{\begin{bmatrix}#1\end{bmatrix}}}
 
 \begin{document}
 
@@ -27,13 +27,13 @@
     
     \item What type of lines will you get by drawing the graph of the pair of equations $x - 2y + 3 = 0$ and $2x - 4y = 5$?
     
-    \item The sum of the numerator and denominator of a fraction is $18$. If the denominator is increased by \text{2}, the fraction is reduced to $\frac{1}{3}$. Find the fraction.
+    \item The sum of the numerator and denominator of a fraction is $18$. If the denominator is increased by $2$, the fraction is reduced to $\frac{1}{3}$. Find the fraction.
     
     \item Find the value of $k$ for which the system of equations $x + 2y = 5$ and $3x + ky + 15 = 0$ has no solution.
     
-    \item If \text{2} tables and \text{2} chairs cost \rupee~700, and \text{4} tables and \text{3} chairs cost \rupee~1,250, then find the cost of one table.
+    \item If $2$ tables and $2$ chairs cost \rupee~$700$, and $4$ tables and $3$ chairs cost \rupee~$1,250$, then find the cost of one table.
     
-    \item If the graph of a  pair of lines $x - 2y + 3 = 0$ and $2x - 4y = 5$ be drawn, then what type of lines are drawn?
+    \item If the graph of a  pair of lines $x - 2y + 3 = 0$ and $2x - 4y = 5$ are drawn, then what type of lines are drawn?
 
     \item If $A = \myvec{1 & -1 \\ -1 & 1}$, then $A^2$ equals:
     \begin{enumerate}
@@ -70,7 +70,7 @@
     		\end{vmatrix} = (1 + a^2 + b^2)^3
 	    \]
 
-    \item Find the equation of the line joining $A(1, 3)$ and $B(0, 0)$ using determinants. Also, find $k$ if $D(k, 0)$ is a point such that the area of $\triangle{ABD}$ is $3$ square units.
+    \item Find the equation of the line joining $A(1, 3)$ and $B(0, 0)$ using determinants. Also, find $k$ if $D(k, 0)$ is a point such that the area of $\Delta{ABD}$ is $3$ square units.
     
     \item Solve the system of linear equations using the matrix method:
     \begin{align*}
@@ -195,7 +195,7 @@
         \item $I$ 
     \end{enumerate}
 
-    \item For $A = \myvec{3 & 1 \\ -1 & 2}$, then $14^{-1}$ is given by:
+    \item For $A = \myvec{3 & 1 \\ -1 & 2}$, then $14A^{-1}$ is given by:
     \begin{enumerate}
         \item $14 \myvec{2 & -1 \\ 1 & 3}$
         \item $\myvec{4 & -2 \\ 2 & 6}$
@@ -216,7 +216,7 @@
         \item $\mydet{A}=0$
         \item $\mydet{A} \in (2,\infty)$
         \item $\mydet{A} \in (2,4)$
-        \item $\mydet{A} \in |2,4|$
+        \item $\mydet{A} \in \mydet{2,4}$
     \end{enumerate}
 \end{enumerate}
 \end{document}
