--- a/gate/Assessment_gate.tex
+++ b/gate/Assessment_gate.tex
@@ -15,7 +15,7 @@
         \item $\overline{A.B}$
         \item $\bar{A}$+$\bar{B}$
         \item $\overline{A + B}$
-        \item $\bar{A}$.$\bar{B}$
-    \end{enumerate}
+        \item $\bar{A}$.$\bar{B}$ \hfill (GATE IN 2022)
+    \end{enumerate} 
 \end{enumerate}
 \end{document}
